1.move checkbox from table6 to table2

--- a/app/index.html
+++ b/app/index.html
@@ -276,6 +276,7 @@
               <table class="display" cellspacing="0">
                 <thead>
                   <tr>
+                    <th><input type="checkbox" /></th>
                     <th>Blog</th>
                     <th>Theme</th>
                     <th>Version</th>
@@ -360,7 +361,6 @@
               <table class="display" cellspacing="0" width="100%">
                 <thead>
                   <tr>
-                    <th></th>
                     <th>Blog</th>
                     <th>Author</th>
                     <th>Subscribers</th>
