achieve the email users function in theme detail panel

--- a/app/index.html
+++ b/app/index.html
@@ -256,6 +256,9 @@
                   <a class="showFilters">Show filters</a>
                   <a class="hideFilters">Hide/reset filters</a>
                 </div>
+                <p class="ibm-button-link emailUsers">
+                  <button type="button" class="ibm-btn-pri ibm-btn-gray-50" disabled>Email Users</button>
+                </p>
                 <form id="table2FilterForm" class="ibm-column-form" method="post">
                   <p class="ibm-form-elem-grp">
                     <label>Filter by:</label>
@@ -276,7 +279,9 @@
               <table class="display" cellspacing="0">
                 <thead>
                   <tr>
-                    <th><input type="checkbox" /></th>
+                    <th>
+                      <input type="checkbox" class="selectAll" />
+                    </th>
                     <th>Blog</th>
                     <th>Theme</th>
                     <th>Version</th>
@@ -420,6 +425,33 @@
           </p>
           <p>
             <a><img src="./images/rawsource.png" alt="Blogs" />Raw Data</a>
+          </p>
+        </div>
+      </div>
+      <div id="emailUsersPopup">
+        <div>
+          <p>
+            <span class="ibm-input-group">
+                <input type="radio" class="ibm-styled-radio" id="allRolesPopup" name="allorspe" value="all" checked /> <label for="allRolesPopup">All Roles</label>
+                <br />
+                <input type="radio" class="ibm-styled-radio" id="speRolesPopup" name="allorspe" value="spe" /> <label for="speRolesPopup">Specific Roles</label>
+                <br />
+              </span>
+            <div id="speRolesPopupGroup">
+              <span class="ibm-input-group">
+                    <input data-init="false" class="ibm-styled-checkbox" id="authorRolePopup" name="typeInSpe" type="checkbox" value="Option A" /> <label for="authorRolePopup">Authors</label>
+                    <br /><input data-init="false" class="ibm-styled-checkbox" id="subRolePopup" name="typeInSpe" type="checkbox" value="Option B" /> <label for="subRolePopup">Subscribers</label>
+                    <br /><input data-init="false" class="ibm-styled-checkbox" id="conRolePopup" name="typeInSpe" type="checkbox" value="Option C" /> <label for="conRolePopup">Contributors</label>
+                    <br /><input data-init="false" class="ibm-styled-checkbox" id="siteRolePopup" name="typeInSpe" type="checkbox" value="Option D" /> <label for="siteRolePopup">Site Owners</label>
+                    <br /><input data-init="false" class="ibm-styled-checkbox" id="adminRolePopup" name="typeInSpe" type="checkbox" value="Option D" /> <label for="adminRolePopup">Administrators</label>
+                  </span>
+            </div>
+          </p>
+          <p class="ibm-button-link">
+            <button type="button" class="ibm-btn-pri ibm-btn-gray-50" id="sendEmailBtn">Send email</button>
+          </p>
+          <p >
+            <a href="javascript:;" target="" title="" id="copyEmailBtn">Copy addresses</a>
           </p>
         </div>
       </div>
