1. Put the show and hide filter button together. 2. Update the new rule to determine the current theme version 3. Fix the "not equal" operator issue.

--- a/app/index.html
+++ b/app/index.html
@@ -212,14 +212,15 @@
             </p>
             <!-- Table1: Blog-->
             <div id="table1" class="tableDivChild">
-              <p class="ibm-button-link emailUsers">
-                <button type="button" class="ibm-btn-pri ibm-btn-gray-50 disabled" data-widget="tooltip" title="To email users, first use the check boxes to select one or more blogs.">Email Users</button>
-              </p>
+              <div class="actionArea">
+                <p class="ibm-button-link toggleFilter">
+                  <button type="button" class="ibm-btn-pri ibm-btn-gray-50 showFilter">Show filters</button>
+                </p>
+                <p class="ibm-button-link emailUsers">
+                  <button type="button" class="ibm-btn-pri ibm-btn-gray-50 disabled" data-widget="tooltip" title="To email users, first use the check boxes to select one or more blogs.">Email Users</button>
+                </p>
+              </div>
               <div class="tableDivFilter">
-                <div class="filterSwitch">
-                  <a class="showFilters">Show filters</a>
-                  <a class="hideFilters">Hide/reset filters</a>
-                </div>
                 <form id="table1FilterForm" class="ibm-column-form" method="post">
                   <p class="ibm-form-elem-grp">
                     <label>Filter by:</label>
@@ -257,14 +258,15 @@
             </div>
             <!-- Table2: Theme -->
             <div id="table2" class="tableDivChild">
-              <p class="ibm-button-link emailUsers">
-                <button type="button" class="ibm-btn-pri ibm-btn-gray-50 disabled" data-widget="tooltip" title="To email users, first use the check boxes to select one or more blogs.">Email Users</button>
-              </p>
+              <div class="actionArea">
+                <p class="ibm-button-link toggleFilter">
+                  <button type="button" class="ibm-btn-pri ibm-btn-gray-50 showFilter">Show filters</button>
+                </p>
+                <p class="ibm-button-link emailUsers">
+                  <button type="button" class="ibm-btn-pri ibm-btn-gray-50 disabled" data-widget="tooltip" title="To email users, first use the check boxes to select one or more blogs.">Email Users</button>
+                </p>
+              </div>
               <div class="tableDivFilter">
-                <div class="filterSwitch">
-                  <a class="showFilters">Show filters</a>
-                  <a class="hideFilters">Hide/reset filters</a>
-                </div>
                 <form id="table2FilterForm" class="ibm-column-form" method="post">
                   <p class="ibm-form-elem-grp">
                     <label>Filter by:</label>
@@ -323,9 +325,11 @@
             </div>
             <!-- Table4: Post -->
             <div id="table4" class="tableDivChild">
-              <p class="ibm-button-link emailUsers">
-                <button type="button" class="ibm-btn-pri ibm-btn-gray-50 disabled" data-widget="tooltip" title="To email users, first use the check boxes to select one or more blogs.">Email Users</button>
-              </p>
+              <div class="actionArea">
+                <p class="ibm-button-link emailUsers">
+                  <button type="button" class="ibm-btn-pri ibm-btn-gray-50 disabled" data-widget="tooltip" title="To email users, first use the check boxes to select one or more blogs.">Email Users</button>
+                </p>
+              </div>
               <table class="display" cellspacing="0">
                 <thead>
                   <tr>
@@ -344,11 +348,12 @@
             </div>
             <!-- Table5: Plugin -->
             <div id="table5" class="tableDivChild">
+              <div class="actionArea">
+                <p class="ibm-button-link toggleFilter">
+                  <button type="button" class="ibm-btn-pri ibm-btn-gray-50 showFilter">Show filters</button>
+                </p>
+              </div>
               <div class="tableDivFilter">
-                <div class="filterSwitch">
-                  <a class="showFilters">Show filters</a>
-                  <a class="hideFilters">Hide/reset filters</a>
-                </div>
                 <form id="table5FilterForm" class="ibm-column-form" method="post">
                   <p class="ibm-form-elem-grp">
                     <label>Filter by:</label>
@@ -390,9 +395,11 @@
             </div>
             <!-- Table6: User -->
             <div id="table6" class="tableDivChild">
-              <p class="ibm-button-link emailUsers">
-                <button type="button" class="ibm-btn-pri ibm-btn-gray-50 disabled" data-widget="tooltip" title="To email users, first use the check boxes to select one or more blogs.">Email Users</button>
-              </p>
+              <div class="actionArea">
+                <p class="ibm-button-link emailUsers">
+                  <button type="button" class="ibm-btn-pri ibm-btn-gray-50 disabled" data-widget="tooltip" title="To email users, first use the check boxes to select one or more blogs.">Email Users</button>
+                </p>
+              </div>
               <table class="display" cellspacing="0" width="100%">
                 <thead>
                   <tr>
@@ -410,11 +417,12 @@
               </table>
             </div>
             <div id="table7" class="tableDivChild">
+              <div class="actionArea">
+                <p class="ibm-button-link toggleFilter">
+                  <button type="button" class="ibm-btn-pri ibm-btn-gray-50 showFilter">Show filters</button>
+                </p>
+              </div>
               <div class="tableDivFilter">
-                <div class="filterSwitch">
-                  <a class="showFilters">Show filters</a>
-                  <a class="hideFilters">Hide/reset filters</a>
-                </div>
                 <form id="table7FilterForm" class="ibm-column-form" method="post">
                   <p class="ibm-form-elem-grp">
                     <label>Filter by:</label>
