add the eighth card

--- a/app/index.html
+++ b/app/index.html
@@ -200,6 +200,17 @@
               <a class="showDetail">Show detail</a>
             </div>
           </div>
+           <div class="card" id="card8">
+            <div class="hoverDiv"></div>
+            <div class="left">
+              <img src="./images/7stack-pages.png" alt="">
+            </div>
+            <div class="right">
+              <p class="cardValue">loading...</p>
+              <p class="cardTitle">average live per blog</p>
+              <a class="showDetail">Show detail</a>
+            </div>
+          </div>
           <div class="clearFloat"></div>
         </div>
         <!-- Table -->
@@ -416,6 +427,7 @@
                 </thead>
               </table>
             </div>
+            <!-- Table7: Plug-in -->
             <div id="table7" class="tableDivChild">
               <div class="actionArea">
                 <p class="ibm-button-link toggleFilter">
@@ -449,6 +461,20 @@
                     <th>Status</th>
                     <th>Last update</th>
                     <th>Templates</th>
+                  </tr>
+                </thead>
+              </table>
+            </div>
+            <!-- Table8: User -->
+            <div id="table8" class="tableDivChild">
+              <table class="display" cellspacing="0" width="100%">
+                <thead>
+                  <tr>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Blog</th>
+                    <th>Role</th>
+                    <th>User Name</th>
                   </tr>
                 </thead>
               </table>
