add another plugin detail pannel

--- a/app/index.html
+++ b/app/index.html
@@ -207,7 +207,18 @@
             </div>
             <div class="right">
               <p class="cardValue">loading...</p>
-              <p class="cardTitle">average live per blog</p>
+              <p class="cardTitle"></p>
+              <a class="showDetail">Show detail</a>
+            </div>
+          </div>
+          <div class="card" id="card9">
+            <div class="hoverDiv"></div>
+            <div class="left">
+              <img src="./images/7stack-pages.png" alt="">
+            </div>
+            <div class="right">
+              <p class="cardValue">Plugin</p>
+              <p class="cardTitle"></p>
               <a class="showDetail">Show detail</a>
             </div>
           </div>
@@ -506,6 +517,18 @@
                     <th>Blog</th>
                     <th>Role</th>
                     <th>User Name</th>
+                  </tr>
+                </thead>
+              </table>
+            </div>
+            <!-- Table9: Plug-in -->
+            <div id="table9" class="tableDivChild">
+              <table class="display" cellspacing="0" width="100%">
+                <thead>
+                  <tr>
+                    <th>Plug-in</th>
+                    <th>Active</th>
+                    <th>Inactive</th>
                   </tr>
                 </thead>
               </table>
