achieve another page detail pannel

--- a/app/index.html
+++ b/app/index.html
@@ -222,6 +222,17 @@
               <a class="showDetail">Show detail</a>
             </div>
           </div>
+          <div class="card" id="card10">
+            <div class="hoverDiv"></div>
+            <div class="left">
+              <img src="./images/7stack-pages.png" alt="">
+            </div>
+            <div class="right">
+              <p class="cardValue">Pages</p>
+              <p class="cardTitle"></p>
+              <a class="showDetail">Show detail</a>
+            </div>
+          </div>
           <div class="clearFloat"></div>
         </div>
         <!-- Table -->
@@ -529,6 +540,18 @@
                     <th>Plug-in</th>
                     <th>Active</th>
                     <th>Inactive</th>
+                  </tr>
+                </thead>
+              </table>
+            </div>
+            <!-- Table10: Pages -->
+            <div id="table10" class="tableDivChild">
+              <table class="display" cellspacing="0" width="100%">
+                <thead>
+                  <tr>
+                    <th>Page</th>
+                    <th>Publish</th>
+                    <th>Unpublish</th>
                   </tr>
                 </thead>
               </table>
