fix the blog issue

--- a/app/index.html
+++ b/app/index.html
@@ -549,7 +549,7 @@
               <table class="display" cellspacing="0" width="100%">
                 <thead>
                   <tr>
-                    <th>Page</th>
+                    <th>Blog</th>
                     <th>Publish</th>
                     <th>Unpublish</th>
                   </tr>
