--- a/app/index.html
+++ b/app/index.html
@@ -120,6 +120,50 @@
         </div>
       </div>
       <section>
+        <!-- Navigation -->
+        <div class="ibm-sitenav-menu-container" >
+          <div class="ibm-sitenav-menu-list">
+            <ul role="menubar">
+              <li role="presentation">
+                <a role="menuitem" href="#">Overview</a>
+              </li>
+              <li role="presentation">
+                <a role="menuitem" href="#">Blogs</a>
+              </li>
+              <li role="presentation">
+                <a role="menuitem" href="#">Themes</a>
+              </li>
+              <li role="presentation" class="ibm-haschildlist">
+                <span role="menuitem">Posts</span>
+                <ul role="menu">
+                  <li role="presentation"><a role="menuitem" href="#" data-cate="post">By Blog</a></li>
+                  <li role="presentation"><a role="menuitem" href="#">By Post</a></li>
+                </ul>
+              </li>
+              <li role="presentation" class="ibm-haschildlist">
+                <span role="menuitem">Pages</span>
+                <ul role="menu">
+                  <li role="presentation"><a role="menuitem" href="#" data-cate="page">By Blog</a></li>
+                  <li role="presentation"><a role="menuitem" href="#">By Page</a></li>
+                </ul>
+              </li>
+              <li role="presentation" class="ibm-haschildlist">
+                <span role="menuitem">Plug-ins</span>
+                <ul role="menu">
+                  <li role="presentation"><a role="menuitem" href="#" data-cate="plugin">By Blog</a></li>
+                  <li role="presentation"><a role="menuitem" href="#">By Plug-in</a></li>
+                </ul>
+              </li>
+              <li role="presentation" class="ibm-haschildlist">
+                <span role="menuitem">Users</span>
+                <ul role="menu">
+                  <li role="presentation"><a role="menuitem" href="#" data-cate="user">By Blog</a></li>
+                  <li role="presentation"><a role="menuitem" href="#">By User</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
         <!-- Card -->
         <div id="main">
           <a id="backToMenu"><img src="images/back.svg" alt="">Back to dashboard home</a>
@@ -199,7 +243,7 @@
               <p class="cardTitle">average live per blog</p>
               <a class="showDetail">Show detail</a>
             </div>
-          </div>
+          </div><!-- 
           <div class="card" id="card8">
             <div class="hoverDiv"></div>
             <div class="left">
@@ -228,11 +272,11 @@
               <img src="./images/7stack-pages.png" alt="">
             </div>
             <div class="right">
-              <p class="cardValue">Pages</p>
+              <p class="cardValue">Pages - count per blog</p>
               <p class="cardTitle"></p>
               <a class="showDetail">Show detail</a>
             </div>
-          </div>
+          </div> -->
           <div class="clearFloat"></div>
         </div>
         <!-- Table -->
