--- a/app/index.html
+++ b/app/index.html
@@ -121,10 +121,10 @@
       </div>
       <section>
         <!-- Navigation -->
-        <div class="ibm-sitenav-menu-container" >
+        <div class="ibm-sitenav-menu-container">
           <div class="ibm-sitenav-menu-list">
             <ul role="menubar">
-              <li role="presentation">
+              <li role="presentation" class="ibm-highlight">
                 <a role="menuitem" href="#">Overview</a>
               </li>
               <li role="presentation">
@@ -133,12 +133,8 @@
               <li role="presentation">
                 <a role="menuitem" href="#">Themes</a>
               </li>
-              <li role="presentation" class="ibm-haschildlist">
-                <span role="menuitem">Posts</span>
-                <ul role="menu">
-                  <li role="presentation"><a role="menuitem" href="#" data-cate="post">By Blog</a></li>
-                  <li role="presentation"><a role="menuitem" href="#">By Post</a></li>
-                </ul>
+              <li role="presentation">
+                <a role="menuitem" href="#">Posts</a>
               </li>
               <li role="presentation" class="ibm-haschildlist">
                 <span role="menuitem">Pages</span>
@@ -243,7 +239,8 @@
               <p class="cardTitle">average live per blog</p>
               <a class="showDetail">Show detail</a>
             </div>
-          </div><!-- 
+          </div>
+          <!-- 
           <div class="card" id="card8">
             <div class="hoverDiv"></div>
             <div class="left">
