fix some issues

--- a/app/index.html
+++ b/app/index.html
@@ -121,7 +121,7 @@
       </div>
       <section>
         <!-- Navigation -->
-        <div class="ibm-sitenav-menu-container">
+        <div class="ibm-sitenav-menu-container" data-sticky="false">
           <div class="ibm-sitenav-menu-list">
             <ul role="menubar">
               <li role="presentation" class="ibm-highlight">
@@ -162,7 +162,6 @@
         </div>
         <!-- Card -->
         <div id="main">
-          <a id="backToMenu"><img src="images/back.svg" alt="">Back to dashboard home</a>
           <div class="card" id="card1">
             <div class="hoverDiv"></div>
             <div class="left">
@@ -240,46 +239,12 @@
               <a class="showDetail">Show detail</a>
             </div>
           </div>
-          <!-- 
-          <div class="card" id="card8">
-            <div class="hoverDiv"></div>
-            <div class="left">
-              <img src="./images/7stack-pages.png" alt="">
-            </div>
-            <div class="right">
-              <p class="cardValue">loading...</p>
-              <p class="cardTitle"></p>
-              <a class="showDetail">Show detail</a>
-            </div>
-          </div>
-          <div class="card" id="card9">
-            <div class="hoverDiv"></div>
-            <div class="left">
-              <img src="./images/7stack-pages.png" alt="">
-            </div>
-            <div class="right">
-              <p class="cardValue">Plugin</p>
-              <p class="cardTitle"></p>
-              <a class="showDetail">Show detail</a>
-            </div>
-          </div>
-          <div class="card" id="card10">
-            <div class="hoverDiv"></div>
-            <div class="left">
-              <img src="./images/7stack-pages.png" alt="">
-            </div>
-            <div class="right">
-              <p class="cardValue">Pages - count per blog</p>
-              <p class="cardTitle"></p>
-              <a class="showDetail">Show detail</a>
-            </div>
-          </div> -->
           <div class="clearFloat"></div>
         </div>
         <!-- Table -->
         <div id="table">
           <h2>Blogs Detail</h2>
-          <div class="tableDiv">
+          <div id="tableDiv">
             <div class="hoverTDiv"></div>
             <p id="tableLoading">
               <span class="ibm-spinner"></span> Loading...
